fix: styles and spacings for meetup section. Update actionButton styles

--- a/client/components/action-button.styl
+++ b/client/components/action-button.styl
@@ -14,7 +14,6 @@
   margin 10px 0
   box-shadow 0px 3px 10px #888
   &:hover
-    background-color $action-pink
-    border 4px solid white
+    background-color $action-pink-dark
     color white
     box-shadow none
