--- a/client/components/title-card.styl
+++ b/client/components/title-card.styl
@@ -1,12 +1,14 @@
 .title-card
   $grid('row', 'center')
-  $center(50vw)
+  $center(40vw)
   background-size cover
   border 6px solid $primary
   color $secondary
-  height 160px
+  height 120px
   text-align center
   transform translateY(-50%)
+  min-width 400px
   h1
-    font-size 4rem
+    font-size 3.5rem
     flex-grow 1
+    text-transform uppercase
