--- a/client/components/workshops/workshops.styl
+++ b/client/components/workshops/workshops.styl
@@ -14,11 +14,11 @@ $workshop-width = 400px
     color $gray-text
     margin 0
   h1
-    font-size 38px
+    font-size $headerDate
     margin-top -30px
   h2
     color $secondary
-    font-size 38px
+    font-size $headerTitle
   h3
     margin-bottom 30px
 
@@ -79,6 +79,7 @@ $workshop-width = 400px
     margin 0
     font-size 20px
     font-weight 100
+    min-width 180px
 
 .title-container
   text-align center
